new file:   .clang-format 	new file:   .vscode/c_cpp_properties.json 	new file:   .vscode/settings.json 	modified:   CMakeLists.txt 	new file:   index.html 	modified:   src/main.cpp 	new file:   src/server.h 	new file:   src/ws_client.cpp 	new file:   src/ws_client.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ endif()
 
 set(SRC_FILES
   src/main.cpp
+  src/ws_client.h
+  src/ws_client.cpp
   )
 
 add_executable(${PROJECT_NAME} ${SRC_FILES})
