--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,14 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "*.ipp": "cpp",
+        "strstream": "cpp"
+    },
+
+    "cmake.debugConfig": {
+        "args": [
+            "test.secbuild.ru", "81", "Hello"
+        ]
     }
 }
