modified:   .vscode/settings.json 	modified:   CMakeLists.txt 	modified:   id.txt 	modified:   ids.txt 	new file:   src/device_payloads.cpp 	new file:   src/device_payloads.hpp 	modified:   src/main.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,7 +89,7 @@
 
     "cmake.debugConfig": {
         "args": [
-            "test.secbuild.ru", "81", "30", "ids.txt"
+            "test.secbuild.ru", "81", "30", "10", "2",  "ids.txt"
         ]
     }
 }
