modified:   .vscode/c_cpp_properties.json     modified:   .vscode/settings.json 	modified:   CMakeLists.txt 	modified:   conanfile.txt 	renamed:    win-readme.txt -> readme.md 	modified:   src/coro_read.hpp 	modified:   src/device_payloads.cpp 	modified:   src/device_payloads.hpp 	modified:   src/main.cpp 	new file:   src/util.cpp 	new file:   src/util.hpp 	modified:   src/utl_log.hpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,12 +84,22 @@
         "*.ipp": "cpp",
         "strstream": "cpp",
         "fstream": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "hash_map": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "numbers": "cpp",
+        "span": "cpp"
     },
 
     "cmake.debugConfig": {
         "args": [
-            "test.secbuild.ru", "81", "30", "10", "4", "no-bad",   "ids.txt"
-        ]
+            "test.secbuild.ru","/socket-units-server/", "81", "30", "10", "4", "no-bad", "events", "../ids.txt"
+        ],
+
+        "MIMode": "gdb",
+        "miDebuggerPath": "/usr/bin/gdb"
     }
 }
