--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.11)
-
+set(CMAKE_VERBOSE_MAKEFILE ON)
 if(POLICY CMP0091)
   cmake_policy(SET CMP0091 NEW)
 endif()
@@ -7,6 +7,8 @@ endif()
 set(CMAKE_CXX_STANDARD 23)
 set(CXX_STANDARD_REQUIRED ON)
 set(CXX_EXTENSIONS ON)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fdiagnostics-all-candidates")
 
 set(CMAKE_TOOLCHAIN_FILE ${CMAKE_BINARY_DIR}/conan_toolchain.cmake)
 
@@ -28,8 +30,10 @@ endif()
 
 set(SRC_FILES
   src/main.cpp
+  src/util.cpp
   src/device_payloads.cpp
   src/device_payloads.hpp
+  src/coro_read.hpp
   )
 
 add_executable(${PROJECT_NAME} ${SRC_FILES})
